# tools-cmake-template

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.MD
cmake/: boost.cmake  functions.cmake  openssl.cmake
include/: source_file1.cpp
include/class1/: class.cpp  class.hpp
include/class2/: header_for_class.hpp
lib/: lib.hpp  source_file1.hpp
lib/class1/: class.cpp  class.hpp
opt/: 2.c  2.h
src/: main.cpp
